<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoFinish</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuracines</string>
    <string name="nada"></string>
    
    <string name="str_confevent">Configuración Evento</string>
    <string name="str_iniciarcomp">Iniciar Competencia</string>
    <string name="str_nombreevento">Nombre del Evento</string>
    <string name="str_valoresdefault">Valores por defecto</string>
    <string name="str_valoresnodefault">Cambiar valores</string>
    <string name="str_orientacion">Orientación de la Prueba</string>
    <string name="str_meta">Meta</string>
    <string name="str_salida">SALIDA</string>
    <string name="str_delimitador_salida">|</string>
    

</resources>
