<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.obik99.bean.MainActivity" >

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/str_confevent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/rojoprofundo"
        android:textSize="25dp"
        android:textStyle="bold" />

    <View
        android:id="@+id/View01"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/graylight" />

    <Button
        android:id="@+id/btnIniciarCompetencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonround_iniciarcompetencia"
        android:onClick="iniciarCompetencia"
        android:padding="10dp"
        android:text="@string/str_iniciarcomp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNombreEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_nombreevento"
        android:textSize="15dp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbxValoresDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:checked="true"
        android:text="@string/str_valor_default"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_orientacion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/rojoprofundo"
        android:textStyle="bold" />
    
    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <RadioGroup
           android:id="@+id/radioGroup1"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center"
           >

             <RadioButton
                 android:id="@+id/rbtnIzq"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:button="@null"
                 android:checked="false"
                 android:drawableRight="@android:drawable/btn_radio"
                 android:text="@string/str_meta"
                 android:textColor="@color/greendark"
                 android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceMedium"/>

             <ImageButton
                 android:id="@+id/imageButton1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:src="@drawable/btn_izquierda" />

             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/str_salida"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/greendark"
                 android:textStyle="bold" />

             <ImageButton
                 android:id="@+id/imageButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:src="@drawable/btn_derecha" />

             <RadioButton
                 android:id="@+id/rbtnDer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:button="@null"
                 android:checked="false"
                 android:drawableLeft="@android:drawable/btn_radio"
                 android:text="@string/str_meta"
                 android:textColor="@color/greendark"
                 android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
       
        </RadioGroup>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

</LinearLayout>